# syncplay

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  config.hh.in  config.mk  portable-file-dialogs.h  syncplay.cc
scripts/: build.mk  linux.mk  macos.mk  windows.mk
syncplay/: main.cc
